syntax = "proto3";

option csharp_namespace = "GrpcCompany";

option java_package = "com.jobboard.grpc.company";
option java_outer_classname = "ProductProto";

package company;

service CompanyService {
  rpc GetCompany (CompanyRequest) returns (CompanyReply);
}

message CompanyRequest {
  string id = 1;
}

message CompanyReply {
  string id = 1;
  string name = 2;
  string code = 3;
  string email = 4;
  string website = 5;
}
